<resources>
    <string name="app_name">Genua SNMP Cockpit</string>
    <string name="navigation_drawer_open">Menü öffnen</string>
    <string name="navigation_drawer_close">Menü schließen</string>
    <string name="close">Schließen</string>
    <string name="nav_header_ip_label">IP: %s</string>
    <string name="nav_header_subnet_label">Subnetzmaske: %s</string>
    <string name="nav_header_dns_server">DNS: %s</string>
    <string name="nav_header_gateway_ip">Gateway: %s</string>
    <string name="title_activity_settings">Einstellungen</string>
    <string name="title_activity_about">Über die App</string>
    <string name="title_activity_snmplogin">Verbinde Gerät per SNMP</string>
    <string name="nav_header_network_information_label">Aktuelle Netzwerkinformationen</string>
    <string name="title_activity_tabbed_device">TabbedDeviceActivity</string>
    <string name="device_menu_disconnect">Verbindung zum Gerät trennen</string>
    <string name="title_activity_queries">SNMP-Abfragen</string>
    <string name="title_activity_own_queries">Eigene SNMP-Abfragen</string>
    <string name="menu_devices_label">Verbundene Geräte</string>
    <string name="menu_queries_label">MIB-Katalog</string>
    <string name="menu_own_queries_label">Eigene Abfragen</string>
    <string name="menu_settings_label">Einstellungen</string>
    <string name="menu_about_label">App-Informationen</string>
    <string name="menu_action_qr_code_label">WLAN-QR-Code scannen</string>
    <string name="menu_action_device_eject_label">Alle Geräte entfernen</string>
    <string name="menu_action_wifi_disconnect_label">Vom WLAN trennen</string>
    <string name="edit_queries">Bearbeiten</string>
    <string-array name="snmp_versions">
        <item>1 / 2c</item>
        <item>3</item>
    </string-array>
    <string-array name="about_screen">
        <item>Lizenz</item>
        <item>Credits</item>
        <item>Wifi QR-Code Schema</item>
        <item>Geräte QR-Code Schema</item>
        <item>Version</item>
    </string-array>
    <string name="scan_wifi_code_label">WIFI-QR-Code (WPA2-PSK oder WPA2-EAP) einscannen.</string>
    <string name="invalid_wifi_qr_code_label">Keinen Wifi-QR-Code erkannt</string>
    <string name="wifi_qr_code_network_change_success">Verbindungsversuch wird gestartet. Die Verbindung zum Netzwerk \'%s\' wird hergestellt.</string>
    <string name="disconnect_all_devices_success">Von allen Geräten getrennt</string>
    <string name="pref_category_general">Allgemein</string>
    <string name="pref_category_network_security">Netzwerk/WIFI-Sicherheit</string>
    <string name="pref_flashlight_hint_label">Taschenlampen-Hinweis anzeigen</string>
    <string name="pref_flashlight_hint_summary">Vor jedem QR-Code Scan wird ein Hinweis angezeigt.</string>
    <string name="pref_is_wifi_ssid_locked_label">Fixe WLAN-SSID</string>
    <string name="pref_is_wifi_ssid_locked_summary">Die App ist nur in einem bestimmten WLAN funktionsfähig. Manuelle Eingabe möglich oder Aktualisierung beim WLAN-QR-Code Scan (Standard).</string>
    <string name="pref_is_ssid_manually_set_label">Manueller Modus</string>
    <string name="pref_is_ssid_manually_set_summary">Sichere SSID beim QR Code Scan nicht aktualisieren.</string>
    <string name="pref_secure_wifi_ssid_label">Feste WLAN-SSID</string>
    <string name="pref_is_wpa2_only_label">Nur WPA2-PSK und WPA2-EAP</string>
    <string name="pref_is_wpa2_only_summary">Ausschließlich WPA2-PSK und WPA2-EAP verwenden.</string>
    <string name="wifi_disable_adapter">WLAN deaktiviert</string>
    <string name="wifi_activated_toast_label">WLAN aktiviert</string>
    <string name="error_connecting_to_network">Keine erfolgreiche WLAN-Verbindung zum Netz \'%s\'. Zugangsdaten korrekt?</string>
    <string name="flashlight_hint">Um die Taschenlampe zu aktivieren, können die Lautstärke-Tasten verwendet werden.</string>
    <string name="btn_no_longer_show">Nicht mehr anzeigen</string>
    <string name="btn_ok">OK</string>
    <string name="no_secure_environment_label">Eine sichere Netzwerkverbindung muss hergestellt werden, um die App weiter benutzen zu können.\n<b>Benötigt:</b>\n</string>
    <string name="cancel_app_btn_label">App Beenden</string>
    <string name="wifi_connection_list_item">\t• WLAN-Verbindung</string>
    <string name="fix_wifi_connection_ssid_list_item">\t• Feste SSID: \'%s\'</string>
    <string name="wifi_connection_wpa_needed_list_item">\t• Verbindungssicherheit: WPA2-PSK oder WPA2-EAP</string>
    <string name="snmp_version">SNMP Version:</string>
    <string name="host">Host:</string>
    <string name="password_label">Passwort:</string>
    <string name="user">Benutzer:</string>
    <string name="public_default_community">public</string>
    <string name="community_label">Community:</string>
    <string name="port">Port:</string>
    <string name="ip_address">IP-Adresse</string>
    <string name="snmpv3_key">Schlüssel:</string>
    <string name="btn_autofill_qr_code">Autofill mit QR-Code</string>
    <string name="btn_device_connect">Gerät verbinden</string>
    <string name="connection_attempt_canceled">Verbindungsversuch abgebrochen</string>
    <string name="toast_no_valid_device_qr_code">Keinen gültigen Geräte-QR-Code erhalten.</string>
    <string name="invalid_user_input">Falsche Eingabe</string>
    <string name="show_password_label">Passwort anzeigen</string>
    <string name="debug_menu_label">Experteneinstellungen</string>
    <string name="pref_allow_all_networks_label">Erlaube alle Netzwerke</string>
    <string name="pref_allow_all_networks_summary">Die Netzwerk-Sicherheitseinstellungen der App sind deaktiviert. Nicht empfohlen.</string>
    <string name="drawer_header_ssid_label">SSID: %s</string>
    <string name="menu_action_wifi_activate">WLAN aktivieren</string>
    <string name="drawer_header_ipv6_address_label">IPv6-Adresse: %s</string>
    <string name="no_secure_environment">Keine sichere Umgebung!</string>
    <string name="scan_device_code_label">Geräte-QR-Code einscannen</string>
    <string name="connection_test_not_successful_label">Verbindungstest nicht erfolgreich. Das Gerät kann nicht verbunden werden.</string>
    <string name="connection_test_successful_label">Verbindungstest erfolgreich. Gerät wurde hinzugefügt.</string>
    <string name="connectivity_check_start_label">Verbindungsversuch wird gestartet…</string>
    <string name="device_snmp_version_label">SNMP-Version:</string>
    <string name="connection_already_exist">Verbindung existiert bereits</string>
    <string name="connect_to_device_toast">Verbinde zum Netzwerk \'%s\'</string>
    <string name="preference_version">%1$s (%2$d)</string>
    <string name="timestamp">%1$s</string>
    <string name="pref_version_title">Version</string>
    <string name="pref_build_timestamp">Build-Zeitpunkt</string>
    <string name="update_label">Aktualisieren</string>
    <string name="please_wait_label">Bitte warten…</string>
    <string name="device_detail_usage_tab_hint">SNMP-Benutzungsinformationen</string>
    <string name="device_detail_custom_hint">Hier werden die eigene Abfragen angezeigt.</string>
    <string name="query_add_textinfo">Eigene OID</string>
    <string name="device_detail_main_hint">Allgemeine SNMP-Informationen des verbundenen Geräts</string>
    <string name="connection_information">Verbindungsinformationen</string>
    <string name="device_refresh_toast_message">Informationen werden aktualisiert\nGerät:</string>
    <string name="connection_attempt_label">Verbindungsversuch</string>
    <string name="user_label">Benutzer:</string>
    <string name="pref_connection_test_timeout_summary">Verbindungs-Timeout für den Verbindungstest in Millisekunden</string>
    <string name="pref_connection_test_retries_summary">Wiederholungsversuche beim Verbindungsaufbau</string>
    <string name="pref_connection_test_retries_title">Verbindungsaufbau-Versuche</string>
    <string name="pref_connection_test_timeout_title">Verbindungsaufbau-Timeout</string>
    <string name="snmp_usage_tab_content_title">Nutzung</string>
    <string name="snmp_usage_tab_content_mibs">MIBs</string>
    <string name="snmp_usage">SNMP-Nutzung</string>
    <string name="device_custom_query_tab_title">Abfragen</string>
    <string name="device_detail_fragment_tab_title">Allgemein</string>
    <string name="pref_session_timeout_title">Session-Ablaufzeit</string>
    <string name="pref_session_timeout_dialog_title">Session-Ablaufzeit (Minuten)</string>
    <string name="pref_session_timeout_summary">Nach einer gewissen Zeit an Inaktivität (in Minuten), läuft die Benutzersitzung ab und muss neu gestartet werden.</string>
    <string name="alert_select_device_dialog_title">Gerät auswählen für SNMP-Abfrage mit der OID</string>
    <string name="alert_open_query_in_new_device_tab">In neuem Geräte-Tab öffnen</string>
    <string name="alert_open_query_in_new_activity">In neuem Fenster öffnen</string>
    <string name="empty_device_list_message">Derzeit ist kein Gerät verbunden.\nDas Plus-Zeichen auswählen, um eine Verbindung herzustellen.</string>
    <string name="title_activity_single_query_result">SingleQueryResultActivity</string>
    <string name="alert_please_add_device_first">Bitte zuerst ein Gerät hinzufügen…</string>
    <string name="activty_title_oid_single_query">OID-Einzelabfrage</string>
    <string name="device_detail_tab_hardware_label">Hardware</string>
    <string name="device_detail_snmp_usage_query_label">Status</string>
    <string name="mib_tree_title">MIB-Übersicht</string>
    <string name="alert_session_timeout_message">Die maximale Zeit der Sitzung (in den Einstellungen konfigurierbar) ist abgelaufen.\nAlle Verbindungen werden entfernt und müssen neu hinzugefügt werden.</string>
    <string name="alert_session_timeout_title">Sitzung abgelaufen</string>
    <string name="alert_connection_timeout_title">Verbindung unterbrochen</string>
    <string name="alert_connection_timeout_retry">Erneut versuchen</string>
    <string name="pref_periodic_update_enabled_title">Regelmäßige Abfragen</string>
    <string name="pref_periodic_update_enabled_summary">Aktualisiert die Oberfläche (Tab-Inhalte sind nur manuell aktualisierbar).</string>
    <string name="pref_periodic_update_interval">Aktualisierungszeit</string>
    <string name="pref_periodic_update_interval_dialog_title">UI-Aktualisierungszeit (in Sekunden)</string>
    <string name="pref_periodic_update_summary">Zeitintervall für Aktualisierungen der Oberfläche.</string>
    <string name="custom_query_name">Bezeichnung</string>
    <string name="custom_query_oid_field_label">Abfrage-OID</string>
    <string name="custom_query_tag_categories_label">Tags/Kategorien</string>
    <string name="custom_query_hardware_type_hint">Hardware-Typ</string>
    <string name="custom_query_single_query_enabled">Einzelabfrage aktiviert</string>
    <string name="manage_query_label">Abfrage verwalten</string>
    <string name="dialog_custom_query_tags_remove_last_tag_content_description">Letzten Tag entfernen</string>
    <string name="custom_query_tags">Kategorien:</string>
    <string name="custom_query_oid">OID:</string>
    <string name="custom_query_name_label">Name:</string>
    <string name="pref_general_connection_timeout_summary">Allgemeines SNMP-Verbindungs-Timeout in Millisekunden</string>
    <string name="pref_general_connection_timeout_title">Verbindungs-Timeout</string>
    <string name="pref_general_connection_retries_title">Verbindungs-Versuche</string>
    <string name="pref_general_connection_retries_summary">Anzahl der allgemeinen Wiederholungsversuche</string>
    <string name="pref_general_use_v1_insteadv2c_summary">Versions-Kompatibilität mit SNMPv1.</string>
    <string name="pref_general_use_v1_insteadv2c_title">SNMP Version 1 statt 2c</string>
    <string name="app_logo_content_description">app logo</string>
</resources>