<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_main_sections"
        android:checkableBehavior="single"
        android:enabled="true">
        <item
            android:id="@+id/nav_main_monitoring_view"
            android:icon="@drawable/ic_devices"
            app:actionLayout="@layout/action_layout_counter"
            android:title="@string/menu_devices_label" />
        <item
            android:id="@+id/nav_mib_catalog"
            android:icon="@drawable/ic_list"
            android:title="@string/menu_queries_label" />
        <item
            android:id="@+id/nav_manage_own_queries"
            android:icon="@drawable/ic_editquery"
            android:title="@string/menu_own_queries_label" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings_label" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/menu_about_label" />
    </group>
    <group
        android:id="@+id/menu_main_actions"
        android:checkableBehavior="none"
        android:enabled="true"
        android:menuCategory="secondary">
        <item
            android:id="@+id/nav_scan_wlan_code"
            android:checkable="false"
            android:icon="@drawable/ic_qr_code"
            android:title="@string/menu_action_qr_code_label" />
        <item
            android:id="@+id/nav_clear_all_devices"
            android:checkable="false"
            android:icon="@drawable/ic_eject"
            android:title="@string/menu_action_device_eject_label" />
        <item
            android:id="@+id/nav_disconnect_wifi"
            android:icon="@drawable/ic_disconnect"
            android:title="@string/menu_action_wifi_disconnect_label" />
    </group>

</menu>


