<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.uni_stuttgart.informatik.sopra.sopraapp.activity.TabbedDeviceActivity">
    <item
        android:id="@+id/action_device_disconnect"
        android:orderInCategory="100"
        android:title="@string/device_menu_disconnect"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_device_refresh"
        android:title="@string/update_label"
        android:icon="@drawable/ic_refresh_white"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_device_connection_info"
        android:title="@string/connection_information"
        android:icon="@drawable/ic_lock_outline_black"
        app:showAsAction="never" />
</menu>
