<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="3dp"
    android:background="@drawable/shape_device_cardview"
    android:orientation="vertical"
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="2dp"
    card_view:cardPreventCornerOverlap="true"
    card_view:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/option_queries"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="false"
            android:orientation="vertical"
            android:stretchColumns="1">

            <TableRow>
                <TextView
                    android:text="@string/custom_query_name_label"
                    android:layout_marginEnd="8dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/query_name_view_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:ellipsize="none"
                    android:maxLines="2"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:text="@string/custom_query_oid"
                    android:layout_marginEnd="8dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/query_oid_view_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:ellipsize="none"
                    android:maxLines="2"/>

            </TableRow>

            <TableRow
                android:id="@+id/query_card_category_row">
                <TextView
                    android:text="@string/custom_query_tags"
                    android:layout_marginEnd="8dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/query_category_view_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:ellipsize="none"
                    android:maxLines="4"/>

            </TableRow>

        </TableLayout>

        <ImageButton
            android:id="@+id/option_queries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:background="@color/colorTransparent"
            android:contentDescription="@string/manage_query_label"
            android:src="@android:drawable/ic_menu_more" />
    </RelativeLayout>

</android.support.v7.widget.CardView>